# DS210---Final-Project

./: README.md
final_project_code/: Cargo.toml  cleaned_output_sept.csv  influencers_november_cleaned.csv  influencers_september_cleaned.csv
final_project_code/data/: influencers_november.csv  influencers_september.csv
final_project_code/src/: csv_reading.rs  graphs.rs  k_means.rs  main.rs  navigate_Data.rs  test
