[package]
name = "final_project_code"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = "0.27"  # Make sure to check for the latest version
csv = "1.1"             # For reading and writing CSV files
regex = "1.8"           # For regular expressions
serde = { version = "1.0", features = ["derive"] }  # For deserialization
